<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/minus_actionbar"
        android:enabled="true"
        android:icon="@drawable/minus_1"
        android:title="@string/actionbar_minus1"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/plus_actionbar"
        android:enabled="true"
        android:icon="@drawable/plus_1"
        android:title="@string/actionbar_plus1"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/reset_actionbar"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/actionbar_today"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/user_actionbar"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/actionbar_user"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toggle_actionbar"
        android:enabled="true"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/actionbar_toggle1"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>
